--- a/kinect/MainWindow.xaml
+++ b/kinect/MainWindow.xaml
@@ -1,8 +1,13 @@
 ﻿<Window x:Class="KinectStrawberryPlucker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kinect Strawberry Plucker" Height="600" Width="800">
+        Title="Kinect Strawberry Plucker" Height="600" Width="1000">
     <Grid>
-        <Image Name="KinectImage" Stretch="Uniform" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Image Name="KinectImage" Grid.Column="0" Stretch="Uniform" />
+        <Image Name="DepthImage" Grid.Column="1" Stretch="Uniform" />
     </Grid>
 </Window>
